--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 nav:
-  Home: /
-  About: /about/
-  Writing: /archives/
-  Projects: http://github.com/probberechts
+  Doma: /
+  O mně: /about/
+  Články: /archives/
+  #Projekty: http://github.com/probberechts
 
-projects_url: http://github.com/probberechts
+  #projects_url: http://github.com/probberechts
 
 customize:
     gravatar:
-        email: 
+        email:
     logo:
         enabled: true
         width: 50
         height: 50
         url: /images/logo.png
         gravatar: false
-    favicon: 
+    favicon:
       # eg. generate with http://realfavicongenerator.net/
       desktop:
         url: /images/favicon.ico
@@ -35,7 +35,7 @@ customize:
     highlight: rainbow
 
 # RSS
-rss: false
+rss:
 
 # Plugins
 plugins:
